[gd_scene load_steps=19 format=3 uid="uid://bpgun2i5o6ru"]

[ext_resource type="Script" path="res://addons/xsm/state.gd" id="1_0ntyj"]
[ext_resource type="Script" path="res://modules/entities/enemies/shades/melee_shade/shade.gd" id="1_305ye"]
[ext_resource type="Script" path="res://addons/basecomponents/Components/2D/hurtbox_component_2d.gd" id="2_7t42n"]
[ext_resource type="Script" path="res://modules/entities/enemies/shades/melee_shade/xsm/roaming.gd" id="3_iblk0"]
[ext_resource type="Script" path="res://addons/basecomponents/Components/health_component.gd" id="3_rx7yw"]
[ext_resource type="Script" path="res://modules/entities/enemies/shades/melee_shade/xsm/seeking.gd" id="4_6wehf"]
[ext_resource type="Script" path="res://modules/entities/enemies/shades/melee_shade/xsm/dead.gd" id="5_fnale"]
[ext_resource type="Script" path="res://modules/entities/enemies/shades/melee_shade/xsm/stunned.gd" id="6_508y8"]
[ext_resource type="Script" path="res://modules/entities/enemies/shades/melee_shade/xsm/melee.gd" id="7_k76c3"]
[ext_resource type="Script" path="res://addons/basecomponents/Components/2D/hitbox_component_2d.gd" id="10_pm2cd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_56qhg"]
radius = 8.1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xa74g"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_54508"]
radius = 15.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lw36x"]
radius = 72.0

[sub_resource type="Animation" id="Animation_0nojc"]
resource_name = "Melee"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBoxComponent2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_6qj3b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBoxComponent2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HurtBoxComponent2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_741tg"]
resource_name = "Stunned"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HurtBoxComponent2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1um1b"]
_data = {
"Melee": SubResource("Animation_0nojc"),
"RESET": SubResource("Animation_6qj3b"),
"Stunned": SubResource("Animation_741tg")
}

[node name="Shade" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 0
collision_mask = 3
motion_mode = 1
script = ExtResource("1_305ye")

[node name="RectShape" type="Polygon2D" parent="."]
y_sort_enabled = true
color = Color(0.790134, 8.27849e-06, 0.517563, 1)
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_56qhg")

[node name="ShadeFSM" type="Node" parent="."]
script = ExtResource("1_0ntyj")
history_size = 0
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")

[node name="Roaming" type="Node" parent="ShadeFSM"]
script = ExtResource("3_iblk0")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath(".")

[node name="Seeking" type="Node" parent="ShadeFSM" node_paths=PackedStringArray("nav_agent")]
script = ExtResource("4_6wehf")
nav_agent = NodePath("../../NavigationAgent2D")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath(".")

[node name="Melee" type="Node" parent="ShadeFSM"]
script = ExtResource("7_k76c3")
animation_player = NodePath("../../AnimationPlayer")
anim_on_enter = "Melee"
loop_mode = 0
on_finished = 1
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../Seeking")

[node name="Stunned" type="Node" parent="ShadeFSM"]
script = ExtResource("6_508y8")
animation_player = NodePath("../../AnimationPlayer")
anim_on_enter = "Stunned"
loop_mode = 0
on_finished = 1
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../Seeking")

[node name="Dead" type="Node" parent="ShadeFSM"]
script = ExtResource("5_fnale")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../Roaming")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_rx7yw")

[node name="HurtBoxComponent2D" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 8
collision_mask = 4
script = ExtResource("2_7t42n")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent2D"]
shape = SubResource("RectangleShape2D_xa74g")

[node name="HitBoxComponent2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
script = ExtResource("10_pm2cd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent2D"]
shape = SubResource("CircleShape2D_54508")
disabled = true
debug_color = Color(1, 0, 1, 0.262745)

[node name="AgroRegion" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AgroRegion"]
shape = SubResource("CircleShape2D_lw36x")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1um1b")
}

[connection signal="Died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="Hit" from="HurtBoxComponent2D" to="." method="_on_hurt_box_component_2d_hit"]
