[gd_scene load_steps=27 format=3 uid="uid://cyh345au8bpro"]

[ext_resource type="Script" path="res://modules/entities/player/player.gd" id="1_ehhf7"]
[ext_resource type="Script" path="res://addons/xsm/state_regions.gd" id="1_mpvpn"]
[ext_resource type="Script" path="res://addons/xsm/state.gd" id="1_q2vpm"]
[ext_resource type="Script" path="res://addons/basecomponents/Components/2D/hurtbox_component_2d.gd" id="3_c6noe"]
[ext_resource type="Script" path="res://addons/basecomponents/Components/health_component.gd" id="4_biapr"]
[ext_resource type="Script" path="res://modules/entities/player/xsm/dash_timer.gd" id="4_j2uqp"]
[ext_resource type="Script" path="res://modules/entities/player/xsm/movement.gd" id="4_xto71"]
[ext_resource type="Script" path="res://modules/entities/player/xsm/can_dash.gd" id="5_parbs"]
[ext_resource type="Script" path="res://modules/entities/player/xsm/idle.gd" id="6_p1gyv"]
[ext_resource type="Script" path="res://modules/entities/player/xsm/walk.gd" id="6_rn5yy"]
[ext_resource type="Script" path="res://modules/entities/player/xsm/can_attack.gd" id="6_yyqig"]
[ext_resource type="Script" path="res://modules/entities/player/xsm/dash.gd" id="9_x3ix7"]
[ext_resource type="Script" path="res://modules/entities/player/xsm/attack.gd" id="10_v37cr"]
[ext_resource type="Script" path="res://addons/xsm/state_animation.gd" id="12_e6mu1"]
[ext_resource type="Material" uid="uid://bisbatw7pxu6r" path="res://assets/debug/pixel_perfect_styling/smooth-pixel.tres" id="13_41n4o"]
[ext_resource type="Texture2D" uid="uid://d3i86f53vn5f8" path="res://modules/entities/player/placeholder_sprites/Idle/Idle_Down.png" id="14_iekqc"]
[ext_resource type="Script" path="res://modules/entities/player/player_camera.gd" id="15_25a4m"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n7koy"]
radius = 3.0
height = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i8cyg"]
size = Vector2(22, 9)

[sub_resource type="Animation" id="Animation_6qj3b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_c5yns"]
resource_name = "attack_down"
length = 0.166671
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.125),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_gy046"]
resource_name = "attack_left"
length = 0.166671
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.125),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_g17vg"]
resource_name = "attack_right"
length = 0.166671
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.125),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_715gg"]
resource_name = "attack_up"
length = 0.166671
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4.71239]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.125),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_axq7n"]
resource_name = "idle_up"
step = 0.125

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1um1b"]
_data = {
"RESET": SubResource("Animation_6qj3b"),
"attack_down": SubResource("Animation_c5yns"),
"attack_left": SubResource("Animation_gy046"),
"attack_right": SubResource("Animation_g17vg"),
"attack_up": SubResource("Animation_715gg"),
"idle_up": SubResource("Animation_axq7n")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 1
y_sort_enabled = true
collision_layer = 4
collision_mask = 83
motion_mode = 1
wall_min_slide_angle = 0.0872665
script = ExtResource("1_ehhf7")

[node name="PlayerFSM" type="Node" parent="."]
editor_description = "Is a state region - we can be in multiple states underneath this node (i.e., both CanDash & CanAttack can both be active states)"
script = ExtResource("1_mpvpn")
history_size = 0
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")

[node name="DashPossible" type="Node" parent="PlayerFSM"]
script = ExtResource("1_q2vpm")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")

[node name="DashTimer" type="Node" parent="PlayerFSM/DashPossible"]
script = ExtResource("4_j2uqp")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = true
waiting_time = 0.5
on_timer_finished = 3
next_state = NodePath("")

[node name="CanDash" type="Node" parent="PlayerFSM/DashPossible"]
script = ExtResource("5_parbs")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")

[node name="AttackPossible" type="Node" parent="PlayerFSM"]
script = ExtResource("1_q2vpm")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")

[node name="NoAttack" type="Node" parent="PlayerFSM/AttackPossible"]
script = ExtResource("1_q2vpm")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")

[node name="CanAttack" type="Node" parent="PlayerFSM/AttackPossible"]
script = ExtResource("6_yyqig")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")

[node name="Movement" type="Node" parent="PlayerFSM"]
script = ExtResource("4_xto71")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")

[node name="Walk" type="Node" parent="PlayerFSM/Movement"]
script = ExtResource("6_rn5yy")
ground_speed = 60.0
acceleration = 20.0
sample = null
animation_player = NodePath("../../../AnimationPlayer")
anim_on_enter = ""
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../Idle")

[node name="Idle" type="Node" parent="PlayerFSM/Movement"]
script = ExtResource("6_p1gyv")
sample = null
animation_player = NodePath("../../../AnimationPlayer")
anim_on_enter = ""
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../Idle")

[node name="Dash" type="Node" parent="PlayerFSM/Movement"]
script = ExtResource("9_x3ix7")
dash_speed = 640
dash_distance = 64
sample = null
animation_player = NodePath("../../../AnimationPlayer")
anim_on_enter = ""
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../Idle")

[node name="Attack" type="Node" parent="PlayerFSM/Movement"]
script = ExtResource("10_v37cr")
sample = null
animation_player = NodePath("../../../AnimationPlayer")
anim_on_enter = ""
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../Idle")

[node name="AttackUp" type="Node" parent="PlayerFSM/Movement/Attack"]
script = ExtResource("12_e6mu1")
animation_player = NodePath("../../../../AnimationPlayer")
anim_on_enter = "attack_up"
loop_mode = 0
on_finished = 1
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../../Idle")

[node name="AttackRight" type="Node" parent="PlayerFSM/Movement/Attack"]
script = ExtResource("12_e6mu1")
animation_player = NodePath("../../../../AnimationPlayer")
anim_on_enter = "attack_right"
loop_mode = 0
on_finished = 1
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../../Idle")

[node name="AttackDown" type="Node" parent="PlayerFSM/Movement/Attack"]
script = ExtResource("12_e6mu1")
animation_player = NodePath("../../../../AnimationPlayer")
anim_on_enter = "attack_down"
loop_mode = 0
on_finished = 1
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../../Idle")

[node name="AttackLeft" type="Node" parent="PlayerFSM/Movement/Attack"]
script = ExtResource("12_e6mu1")
animation_player = NodePath("../../../../AnimationPlayer")
anim_on_enter = "attack_left"
loop_mode = 0
on_finished = 1
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../../Idle")

[node name="MovementDisabled" type="Node" parent="PlayerFSM/Movement"]
script = ExtResource("1_q2vpm")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("13_41n4o")
texture = ExtResource("14_iekqc")
offset = Vector2(0, -11)
hframes = 8

[node name="BodyCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_n7koy")

[node name="Sword" type="Area2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(0, -8)
collision_mask = 97

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword"]
position = Vector2(11, -3.69551e-07)
shape = SubResource("RectangleShape2D_i8cyg")
disabled = true
debug_color = Color(1, 1, 1, 0.42)

[node name="HurtBoxComponent2D" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("3_c6noe")
health_component = NodePath("../HealthComponent")

[node name="HurtBoxCollider" type="CollisionShape2D" parent="HurtBoxComponent2D"]
position = Vector2(0, -3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_n7koy")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_biapr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1um1b")
}

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
process_callback = 0
position_smoothing_speed = 12.0
script = ExtResource("15_25a4m")

[connection signal="area_entered" from="Sword" to="." method="_on_sword_area_entered"]
[connection signal="body_entered" from="Sword" to="." method="_on_sword_body_entered"]
